# md2_project_olis

./: .gitignore  README.md  env_sample  environment.yml  pyproject.toml  requirements.txt
dagster_project/: repository.py
dagster_project/assets/: analysis.py  dbt_models.py  elementary.py  meltano_ingestion.py  quality_checks.py
dagster_project/jobs/: pipeline.py
dagster_project/resources/: bigquery.py  env_loader.py
dagster_project/schedules/: daily_schedule.py
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbt_project/macros/: utils.sql
dbt_project/models/: sources.yml
dbt_project/models/marts/: dim_customer.sql  dim_date.sql  dim_product.sql  (+2 more)
dbt_project/snapshots/: category_translation_snapshot.sql  customers_snapshot.sql  order_items_snapshot.sql  order_reviews_snapshot.sql  orders_snapshot.sql  payments_snapshot.sql  products_snapshot.sql  sellers_snapshot.sql
docs/: Olist_Project_Presentation-v0.7.pptx  pipeline_diagram.drawio  report.md
great_expectations/: great_expectations.yml
great_expectations/expectations/: dim_customer_expectations.yml  dim_date_expectations.yml  dim_product_expectations.yml  fact_sales_expectations.yml
meltano_project/: README.md  meltano.yml
meltano_project/data/: sellers.csv
notebooks/: EDA.ipynb  data_ingestion.py  exploratory_analysis.ipynb
streamlit_dashboard/: fix_secrets.py  simple_test.py  streamlit_app.py
streamlit_dashboard/.streamlit/: config.toml
streamlit_dashboard/pages/: data_explorer.py
streamlit_dashboard/utils/: bigquery_client.py  data_queries.py  visualization_helpers.py
(+18 files in other folders)
